# lilq-pinn

./: .gitignore  CITATION.cff  LICENSE  README.md  REPRODUCE.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
Bratu/: bratu_core.py  bratu_plots_refactored.py  convergence_plots.py  run_bratu_experiments.py
Bratu/properties/: plot_combined_theorem2.py  theorem2_validation.py
Kovasznay/: kovasznay_core.py  run_kovasznay_experiments.py
LinearElasticity/: elasticity_core.py  run_elasticity_experiments.py
data/spe10/: README.md  perm_field_S1.txt  perm_field_S2.txt  perm_field_S3.txt  perm_field_SPE10.txt
examples/: lilq_demo.ipynb  run_bl_lilq.py  run_bratu_lilq.py  run_burgers_lilq.py  run_elasticity_lilq.py  run_kovasznay_lilq.py  run_lilq_interactive.ipynb
experiments/: exp_utils.py  run_all_dry.py  run_beltrami.py  run_bl.py  run_bratu.py  run_burgers.py  run_burgers_basis_comparison.py  run_darcy.py  run_elasticity.py  run_kovasznay.py
lilq/: __init__.py  analysis.py  basis.py  collocation.py  metrics.py  nn.py  plotting.py  pretraining.py  properties.py  solvers.py  style.py  utils.py
lilq_shared/: __init__.py  basis.py  plotting.py  style.py  theorem2.py  utils.py
problems/: __init__.py  beltrami.py  bratu.py  buckley_leverett.py  burgers.py  darcy.py  elasticity.py  kovasznay.py
reference_results/beltrami_experiments_chebyshev/: beltrami_master_results.json
reference_results/beltrami_experiments_chebyshev/N_N6_Np8/: lil_q_checkpoint.npz  lil_q_metrics.csv  lil_q_summary.json
reference_results/bl_experiments_fourier/N_16/: lil_n_checkpoint.npz  lil_n_metrics.csv  lil_n_summary.json  lil_q_checkpoint.npz  lil_q_metrics.csv  lil_q_summary.json  nil_n_checkpoint.pt  nil_n_metrics.csv  nil_n_summary.json  nil_q_checkpoint.pt  nil_q_metrics.csv  nil_q_summary.json
reference_results/bl_experiments_fourier/N_24/: lil_n_checkpoint.npz  lil_n_metrics.csv  lil_n_summary.json  lil_q_checkpoint.npz  lil_q_metrics.csv  lil_q_summary.json  nil_n_checkpoint.pt  nil_n_metrics.csv  nil_n_summary.json  (+3 more)
reference_results/burgers_basis_comparison/: burgers_basis_results.json
reference_results/darcy_experiments_order32/: darcy_master_results.json
reference_results/elasticity_experiments_mixed/: elasticity_master_results.json
reference_results/kovasznay_experiments_chebyshev/: kovasznay_master_results.json
scripts/: generate_permeability.py
(+209 files in other folders)
