[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lilq-shared"
version = "1.0.0"
description = "Consolidated basis engines, publication stylesheets, neural architectures, and convergence plotting for Linear-in-Learnables (LiL) research."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Gbenga / Claude pair research"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "torch>=1.10.0",
    "plotly>=5.3.0"
]

[tool.setuptools]
packages = ["lilq_shared"]
